add logout and resend token api
